--- a/Schaak/TODO.txt
+++ b/Schaak/TODO.txt
@@ -1,10 +1,12 @@
-* Display board
+# Display board
 * COMMENT!
 * CMake (Chris)
 * Display pieces
   * as dots
   * as sprites
 * Zoomable board
+  # Zoom on mouse wheel
+  # Bound map positions
   * Piece sprite sizes - (not 1,)2,3,4,6,8,12,16,24,32 square
   * Change in board texture when zooming?
   * Scroll on arrow keys and presence of mouse in window edge
